5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1575_1332.log
== TEST (2019-03-12 11:40:35) 
-- CODE:
aresta =5cm
area =3/2**0.5*3a*a 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:42:45) 
-- CODE:
aresta =5
area =3/2**0.5*3*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.191585
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
159.099
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:44:27) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:44:38) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.189471
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:44) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area3/2**0.5*3**2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area3/2**0.5*3**2, 4))
NameError: name 'area3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:47) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area3/2**0.5*3**2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area3/2**0.5*3**2, 4))
NameError: name 'area3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:45:59) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area 3/2**0.5*3**2, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area 3/2**0.5*3**2, 4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:11) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area, 4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:33) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area19.0919, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area19.0919, 4))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:46:54) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area a, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area a, 4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:47:07) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area , 4))
-- EXECUTION TIME:
0.175953
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:37) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area hexagono,4))
-- ERROR:
File "XXXX", line 4
    print(round(area hexagono,4))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:53) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:12) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area 6,4))
-- ERROR:
File "XXXX", line 4
    print(round(area 6,4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:24) 
-- CODE:
aresta =5
area =3/2**0.5*3**2http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1575#
 
print(round(area6,4))
-- ERROR:
File "XXXX", line 2
    area =3/2**0.5*3**2http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1575#
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:17) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area A,4))
-- ERROR:
File "XXXX", line 4
    print(round(area A,4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:36) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:40) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:45) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:49) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
 
print(round(area ,4))
-- EXECUTION TIME:
0.171005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:34) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
area=19.0919
print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:37) 
-- CODE:
aresta =5
area =3/2**0.5*3**2
area=19.0919
print(round(area ,4))
-- EXECUTION TIME:
0.144305
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:18) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:36) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area x,4))
-- ERROR:
File "XXXX", line 4
    print(round(area x,4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:49) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:41) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area 5 ,4))
-- ERROR:
File "XXXX", line 4
    print(round(area 5 ,4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:54:01) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- EXECUTION TIME:
0.135908
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
19.0919
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:03) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:56) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:40) 
-- CODE:
aresta =5
area =3/2**0.5*3**2

print(round(area ,4))
-- OUTPUT:
19.0919
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:32) 
-- CODE:
aresta =5
area =3/2**0.5*3*aresta**2

print(round(area ,4))
-- OUTPUT:
159.099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:43) 
-- CODE:
aresta =5
area= 3/2*(0.5**3*aresta**2)

print(round(area ,4))
-- OUTPUT:
4.6875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:48) 
-- CODE:
aresta =5
area= 3/2*(0.5**3*aresta**2)

print(round(area ,4))
-- EXECUTION TIME:
0.157562
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.6875
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:32) 
-- CODE:
aresta =5
area= 3/2*3**0.5*aresta**2

print(round(area ,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:59:38) 
-- CODE:
aresta =5
area= 3/2*3**0.5*aresta**2

print(round(area ,4))
-- EXECUTION TIME:
0.129186
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:31:50) 
-- CODE:
A = 3/2 * (3**0.5) * a**2
a = 5
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    A = 3/2 * (3**0.5) * a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:32:15) 
-- CODE:
a = 5
A = 3/2 * (3**0.5) * a**2

print(round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 09:32:45) 
-- CODE:
a = 5
A = 3/2 * (3**0.5) * a**2

print(round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 09:32:48) 
-- CODE:
a = 5
A = 3/2 * (3**0.5) * a**2

print(round(A, 4))
-- EXECUTION TIME:
0.282035
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
